// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormPost /> renders component with initial screen and close form 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c3 {
  width: 100%;
  height: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c2 {
  color: #D5D5D5;
  width: 2rem;
  cursor: pointer;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  margin-top: 0.5rem;
  margin-right: 1rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: background.light;
  border-radius: 2%;
  background-color: #000;
}

.c5 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

.c9 {
  font-size: 12px;
  font-weight: 400;
  line-height: 1;
}

.c7 {
  border: 0;
  cursor: pointer;
  padding: 12px 26px;
  font-weight: bold;
  border-radius: 8px;
  font-size: 12px;
  font-weight: 400;
  line-height: 1;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  border-radius: 12px;
}

.c7:hover,
.c7:focus {
  -webkit-filter: blur(0.9px);
  filter: blur(0.9px);
}

.c7:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c8 {
  border: 0;
  cursor: pointer;
  padding: 12px 26px;
  font-weight: bold;
  border-radius: 8px;
  font-size: 12px;
  font-weight: 400;
  line-height: 1;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  border-radius: 12px;
  width: 100%;
}

.c8:hover,
.c8:focus {
  -webkit-filter: blur(0.9px);
  filter: blur(0.9px);
}

.c8:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c4 {
  margin-bottom: 17px;
}

.c6 {
  width: 100%;
  border: 1px solid;
  padding: 12px 16px;
  outline: 0;
  border-radius: 12px;
}

@media only screen and (min-width:0px) {
  .c2 {
    margin-bottom: 0.5rem;
  }
}

@media only screen and (min-width:768px) {
  .c2 {
    margin-bottom: 0rem;
  }
}

@media only screen and (min-width:0px) {
  .c0 {
    width: 80%;
  }
}

@media only screen and (min-width:480px) {
  .c0 {
    width: 70%;
  }
}

@media only screen and (min-width:768px) {
  .c0 {
    width: 45%;
  }
}

@media only screen and (min-width:992px) {
  .c0 {
    width: 35%;
  }
}

@media only screen and (min-width:1200px) {
  .c0 {
    width: 400px;
  }
}

@media only screen and (min-width:0px) {
  .c0 {
    height: 95vh;
  }
}

@media only screen and (min-width:480px) {
  .c0 {
    height: 65vh;
  }
}

@media only screen and (min-width:768px) {
  .c0 {
    height: 60vh;
  }
}

@media only screen and (min-width:0px) {
  .c7 {
    font-size: 12px;
    font-weight: 400;
    line-height: 1;
  }
}

@media only screen and (min-width:768px) {
  .c7 {
    font-size: 16px;
    font-weight: 400;
    line-height: 1.25;
  }
}

@media only screen and (min-width:0px) {
  .c8 {
    font-size: 12px;
    font-weight: 400;
    line-height: 1;
  }
}

@media only screen and (min-width:768px) {
  .c8 {
    font-size: 16px;
    font-weight: 400;
    line-height: 1.25;
  }
}

<div>
      <article
        class="c0"
        data-modal-safe-area="true"
        display="flex"
        height="[object Object]"
        mode="dark"
        width="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="c1 c2 closeFormPost"
          fill="currentColor"
          focusable="false"
          mode="dark"
          type="post"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            data-name="Layer 2"
          >
            <path
              d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm2.71 11.29a1 1 0 010 1.42 1 1 0 01-1.42 0L12 13.41l-1.29 1.3a1 1 0 01-1.42 0 1 1 0 010-1.42l1.3-1.29-1.3-1.29a1 1 0 011.42-1.42l1.29 1.3 1.29-1.3a1 1 0 011.42 1.42L13.41 12z"
              data-name="close-circle"
            />
          </g>
        </svg>
        <figure
          class="c3"
          mode=""
        >
          <svg
            fill="none"
            height="184"
            viewBox="0 0 184 184"
            width="184"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              opacity="0.1"
            >
              <path
                clip-rule="evenodd"
                d="M38.3333 30.6666C34.0991 30.6666 30.6666 34.0991 30.6666 38.3333V145.667C30.6666 149.901 34.0991 153.333 38.3333 153.333H145.667C149.901 153.333 153.333 149.901 153.333 145.667V38.3333C153.333 34.0991 149.901 30.6666 145.667 30.6666H38.3333ZM15.3333 38.3333C15.3333 25.6307 25.6307 15.3333 38.3333 15.3333H145.667C158.369 15.3333 168.667 25.6307 168.667 38.3333V145.667C168.667 158.369 158.369 168.667 145.667 168.667H38.3333C25.6307 168.667 15.3333 158.369 15.3333 145.667V38.3333Z"
                fill="#181F22"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M65.1667 61.3333C63.0496 61.3333 61.3333 63.0496 61.3333 65.1667C61.3333 67.2838 63.0496 69 65.1667 69C67.2838 69 69 67.2838 69 65.1667C69 63.0496 67.2838 61.3333 65.1667 61.3333ZM46 65.1667C46 54.5812 54.5812 46 65.1667 46C75.7521 46 84.3333 54.5812 84.3333 65.1667C84.3333 75.7521 75.7521 84.3333 65.1667 84.3333C54.5812 84.3333 46 75.7521 46 65.1667Z"
                fill="#181F22"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M117.246 71.2455C120.24 68.2515 125.094 68.2515 128.088 71.2455L166.421 109.579C169.415 112.573 169.415 117.427 166.421 120.421C163.427 123.415 158.573 123.415 155.579 120.421L122.667 87.509L43.7546 166.421C40.7605 169.415 35.9063 169.415 32.9123 166.421C29.9182 163.427 29.9182 158.573 32.9123 155.579L117.246 71.2455Z"
                fill="#181F22"
                fill-rule="evenodd"
              />
            </g>
          </svg>
        </figure>
        <form
          style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 40%; width: 85%;"
        >
          <div
            style="position: relative; width: 100%;"
          >
            <div
              class="c4"
            >
              <input
                class="c5 c6"
                color="background.light"
                mode=""
                name="image_url"
                placeholder="URL da imagem"
                type="text"
                value=""
              />
            </div>
            <button
              class="c7 changeUrl"
              mode=""
              style="padding: 0.6rem 1rem; position: absolute; top: 0px; right: 0px;"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12H19"
                  stroke="white"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M12 5L19 12L12 19"
                  stroke="white"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
          <span
            class="c5"
            color="tertiary.light"
            mode=""
          >
            Formatos suportados: jpg, png, svg e xpto.
          </span>
          <button
            class="c8 submitUrl"
            disabled=""
            mode=""
            style="margin-top: 2.5rem; margin-bottom: 0.5rem;"
          >
            Avançar
          </button>
          <span
            class="c9"
            color="error.main"
            mode=""
          >
            Por favor insere uma url valida!
          </span>
        </form>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="Box-sc-1swxen0-0 hDnmCK"
      data-modal-safe-area="true"
      display="flex"
      height="[object Object]"
      mode="dark"
      width="[object Object]"
    >
      <svg
        aria-hidden="true"
        class="StyledIconBase-ea9ulj-0 cKCFNq CloseModalIcon-dhl7rb-0 eYKoq closeFormPost"
        fill="currentColor"
        focusable="false"
        mode="dark"
        type="post"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          data-name="Layer 2"
        >
          <path
            d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm2.71 11.29a1 1 0 010 1.42 1 1 0 01-1.42 0L12 13.41l-1.29 1.3a1 1 0 01-1.42 0 1 1 0 010-1.42l1.3-1.29-1.3-1.29a1 1 0 011.42-1.42l1.29 1.3 1.29-1.3a1 1 0 011.42 1.42L13.41 12z"
            data-name="close-circle"
          />
        </g>
      </svg>
      <figure
        class="PostImage__DefaultStyle-sc-1e9jv37-1 jYONzd"
        mode=""
      >
        <svg
          fill="none"
          height="184"
          viewBox="0 0 184 184"
          width="184"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity="0.1"
          >
            <path
              clip-rule="evenodd"
              d="M38.3333 30.6666C34.0991 30.6666 30.6666 34.0991 30.6666 38.3333V145.667C30.6666 149.901 34.0991 153.333 38.3333 153.333H145.667C149.901 153.333 153.333 149.901 153.333 145.667V38.3333C153.333 34.0991 149.901 30.6666 145.667 30.6666H38.3333ZM15.3333 38.3333C15.3333 25.6307 25.6307 15.3333 38.3333 15.3333H145.667C158.369 15.3333 168.667 25.6307 168.667 38.3333V145.667C168.667 158.369 158.369 168.667 145.667 168.667H38.3333C25.6307 168.667 15.3333 158.369 15.3333 145.667V38.3333Z"
              fill="#181F22"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M65.1667 61.3333C63.0496 61.3333 61.3333 63.0496 61.3333 65.1667C61.3333 67.2838 63.0496 69 65.1667 69C67.2838 69 69 67.2838 69 65.1667C69 63.0496 67.2838 61.3333 65.1667 61.3333ZM46 65.1667C46 54.5812 54.5812 46 65.1667 46C75.7521 46 84.3333 54.5812 84.3333 65.1667C84.3333 75.7521 75.7521 84.3333 65.1667 84.3333C54.5812 84.3333 46 75.7521 46 65.1667Z"
              fill="#181F22"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M117.246 71.2455C120.24 68.2515 125.094 68.2515 128.088 71.2455L166.421 109.579C169.415 112.573 169.415 117.427 166.421 120.421C163.427 123.415 158.573 123.415 155.579 120.421L122.667 87.509L43.7546 166.421C40.7605 169.415 35.9063 169.415 32.9123 166.421C29.9182 163.427 29.9182 158.573 32.9123 155.579L117.246 71.2455Z"
              fill="#181F22"
              fill-rule="evenodd"
            />
          </g>
        </svg>
      </figure>
      <form
        style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 40%; width: 85%;"
      >
        <div
          style="position: relative; width: 100%;"
        >
          <div
            class="TextField__InputWrapper-sc-1rxybqp-0 iTdXJA"
          >
            <input
              class="Text__TextBase-s0iq10-0 gviOmd TextField__Input-sc-1rxybqp-1 ejLANn"
              color="background.light"
              mode=""
              name="image_url"
              placeholder="URL da imagem"
              type="text"
              value=""
            />
          </div>
          <button
            class="Button__ButtonWrapper-dey3sw-0 hxjHNE changeUrl"
            mode=""
            style="padding: 0.6rem 1rem; position: absolute; top: 0px; right: 0px;"
          >
            <svg
              fill="none"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12H19"
                stroke="white"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M12 5L19 12L12 19"
                stroke="white"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <span
          class="Text__TextBase-s0iq10-0 gviOmd"
          color="tertiary.light"
          mode=""
        >
          Formatos suportados: jpg, png, svg e xpto.
        </span>
        <button
          class="Button__ButtonWrapper-dey3sw-0 jeOWtT submitUrl"
          disabled=""
          mode=""
          style="margin-top: 2.5rem; margin-bottom: 0.5rem;"
        >
          Avançar
        </button>
        <span
          class="Text__TextBase-s0iq10-0 ShIMM"
          color="error.main"
          mode=""
        >
          Por favor insere uma url valida!
        </span>
      </form>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<FormPost /> renders component with initial screen and initial state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c3 {
  width: 100%;
  height: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c2 {
  color: #D5D5D5;
  width: 2rem;
  cursor: pointer;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  margin-top: 0.5rem;
  margin-right: 1rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: background.light;
  border-radius: 2%;
  background-color: #000;
}

.c5 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

.c9 {
  font-size: 12px;
  font-weight: 400;
  line-height: 1;
}

.c7 {
  border: 0;
  cursor: pointer;
  padding: 12px 26px;
  font-weight: bold;
  border-radius: 8px;
  font-size: 12px;
  font-weight: 400;
  line-height: 1;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  border-radius: 12px;
}

.c7:hover,
.c7:focus {
  -webkit-filter: blur(0.9px);
  filter: blur(0.9px);
}

.c7:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c8 {
  border: 0;
  cursor: pointer;
  padding: 12px 26px;
  font-weight: bold;
  border-radius: 8px;
  font-size: 12px;
  font-weight: 400;
  line-height: 1;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  border-radius: 12px;
  width: 100%;
}

.c8:hover,
.c8:focus {
  -webkit-filter: blur(0.9px);
  filter: blur(0.9px);
}

.c8:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c4 {
  margin-bottom: 17px;
}

.c6 {
  width: 100%;
  border: 1px solid;
  padding: 12px 16px;
  outline: 0;
  border-radius: 12px;
}

@media only screen and (min-width:0px) {
  .c2 {
    margin-bottom: 0.5rem;
  }
}

@media only screen and (min-width:768px) {
  .c2 {
    margin-bottom: 0rem;
  }
}

@media only screen and (min-width:0px) {
  .c0 {
    width: 80%;
  }
}

@media only screen and (min-width:480px) {
  .c0 {
    width: 70%;
  }
}

@media only screen and (min-width:768px) {
  .c0 {
    width: 45%;
  }
}

@media only screen and (min-width:992px) {
  .c0 {
    width: 35%;
  }
}

@media only screen and (min-width:1200px) {
  .c0 {
    width: 400px;
  }
}

@media only screen and (min-width:0px) {
  .c0 {
    height: 95vh;
  }
}

@media only screen and (min-width:480px) {
  .c0 {
    height: 65vh;
  }
}

@media only screen and (min-width:768px) {
  .c0 {
    height: 60vh;
  }
}

@media only screen and (min-width:0px) {
  .c7 {
    font-size: 12px;
    font-weight: 400;
    line-height: 1;
  }
}

@media only screen and (min-width:768px) {
  .c7 {
    font-size: 16px;
    font-weight: 400;
    line-height: 1.25;
  }
}

@media only screen and (min-width:0px) {
  .c8 {
    font-size: 12px;
    font-weight: 400;
    line-height: 1;
  }
}

@media only screen and (min-width:768px) {
  .c8 {
    font-size: 16px;
    font-weight: 400;
    line-height: 1.25;
  }
}

<body>
    <div>
      <article
        class="c0"
        data-modal-safe-area="true"
        display="flex"
        height="[object Object]"
        mode="dark"
        width="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="c1 c2 closeFormPost"
          fill="currentColor"
          focusable="false"
          mode="dark"
          type="post"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            data-name="Layer 2"
          >
            <path
              d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm2.71 11.29a1 1 0 010 1.42 1 1 0 01-1.42 0L12 13.41l-1.29 1.3a1 1 0 01-1.42 0 1 1 0 010-1.42l1.3-1.29-1.3-1.29a1 1 0 011.42-1.42l1.29 1.3 1.29-1.3a1 1 0 011.42 1.42L13.41 12z"
              data-name="close-circle"
            />
          </g>
        </svg>
        <figure
          class="c3"
          mode=""
        >
          <svg
            fill="none"
            height="184"
            viewBox="0 0 184 184"
            width="184"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              opacity="0.1"
            >
              <path
                clip-rule="evenodd"
                d="M38.3333 30.6666C34.0991 30.6666 30.6666 34.0991 30.6666 38.3333V145.667C30.6666 149.901 34.0991 153.333 38.3333 153.333H145.667C149.901 153.333 153.333 149.901 153.333 145.667V38.3333C153.333 34.0991 149.901 30.6666 145.667 30.6666H38.3333ZM15.3333 38.3333C15.3333 25.6307 25.6307 15.3333 38.3333 15.3333H145.667C158.369 15.3333 168.667 25.6307 168.667 38.3333V145.667C168.667 158.369 158.369 168.667 145.667 168.667H38.3333C25.6307 168.667 15.3333 158.369 15.3333 145.667V38.3333Z"
                fill="#181F22"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M65.1667 61.3333C63.0496 61.3333 61.3333 63.0496 61.3333 65.1667C61.3333 67.2838 63.0496 69 65.1667 69C67.2838 69 69 67.2838 69 65.1667C69 63.0496 67.2838 61.3333 65.1667 61.3333ZM46 65.1667C46 54.5812 54.5812 46 65.1667 46C75.7521 46 84.3333 54.5812 84.3333 65.1667C84.3333 75.7521 75.7521 84.3333 65.1667 84.3333C54.5812 84.3333 46 75.7521 46 65.1667Z"
                fill="#181F22"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M117.246 71.2455C120.24 68.2515 125.094 68.2515 128.088 71.2455L166.421 109.579C169.415 112.573 169.415 117.427 166.421 120.421C163.427 123.415 158.573 123.415 155.579 120.421L122.667 87.509L43.7546 166.421C40.7605 169.415 35.9063 169.415 32.9123 166.421C29.9182 163.427 29.9182 158.573 32.9123 155.579L117.246 71.2455Z"
                fill="#181F22"
                fill-rule="evenodd"
              />
            </g>
          </svg>
        </figure>
        <form
          style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 40%; width: 85%;"
        >
          <div
            style="position: relative; width: 100%;"
          >
            <div
              class="c4"
            >
              <input
                class="c5 c6"
                color="background.light"
                mode=""
                name="image_url"
                placeholder="URL da imagem"
                type="text"
                value=""
              />
            </div>
            <button
              class="c7 changeUrl"
              mode=""
              style="padding: 0.6rem 1rem; position: absolute; top: 0px; right: 0px;"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12H19"
                  stroke="white"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M12 5L19 12L12 19"
                  stroke="white"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
          <span
            class="c5"
            color="tertiary.light"
            mode=""
          >
            Formatos suportados: jpg, png, svg e xpto.
          </span>
          <button
            class="c8 submitUrl"
            disabled=""
            mode=""
            style="margin-top: 2.5rem; margin-bottom: 0.5rem;"
          >
            Avançar
          </button>
          <span
            class="c9"
            color="error.main"
            mode=""
          >
            Por favor insere uma url valida!
          </span>
        </form>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="Box-sc-1swxen0-0 hDnmCK"
      data-modal-safe-area="true"
      display="flex"
      height="[object Object]"
      mode="dark"
      width="[object Object]"
    >
      <svg
        aria-hidden="true"
        class="StyledIconBase-ea9ulj-0 cKCFNq CloseModalIcon-dhl7rb-0 eYKoq closeFormPost"
        fill="currentColor"
        focusable="false"
        mode="dark"
        type="post"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          data-name="Layer 2"
        >
          <path
            d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm2.71 11.29a1 1 0 010 1.42 1 1 0 01-1.42 0L12 13.41l-1.29 1.3a1 1 0 01-1.42 0 1 1 0 010-1.42l1.3-1.29-1.3-1.29a1 1 0 011.42-1.42l1.29 1.3 1.29-1.3a1 1 0 011.42 1.42L13.41 12z"
            data-name="close-circle"
          />
        </g>
      </svg>
      <figure
        class="PostImage__DefaultStyle-sc-1e9jv37-1 jYONzd"
        mode=""
      >
        <svg
          fill="none"
          height="184"
          viewBox="0 0 184 184"
          width="184"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity="0.1"
          >
            <path
              clip-rule="evenodd"
              d="M38.3333 30.6666C34.0991 30.6666 30.6666 34.0991 30.6666 38.3333V145.667C30.6666 149.901 34.0991 153.333 38.3333 153.333H145.667C149.901 153.333 153.333 149.901 153.333 145.667V38.3333C153.333 34.0991 149.901 30.6666 145.667 30.6666H38.3333ZM15.3333 38.3333C15.3333 25.6307 25.6307 15.3333 38.3333 15.3333H145.667C158.369 15.3333 168.667 25.6307 168.667 38.3333V145.667C168.667 158.369 158.369 168.667 145.667 168.667H38.3333C25.6307 168.667 15.3333 158.369 15.3333 145.667V38.3333Z"
              fill="#181F22"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M65.1667 61.3333C63.0496 61.3333 61.3333 63.0496 61.3333 65.1667C61.3333 67.2838 63.0496 69 65.1667 69C67.2838 69 69 67.2838 69 65.1667C69 63.0496 67.2838 61.3333 65.1667 61.3333ZM46 65.1667C46 54.5812 54.5812 46 65.1667 46C75.7521 46 84.3333 54.5812 84.3333 65.1667C84.3333 75.7521 75.7521 84.3333 65.1667 84.3333C54.5812 84.3333 46 75.7521 46 65.1667Z"
              fill="#181F22"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M117.246 71.2455C120.24 68.2515 125.094 68.2515 128.088 71.2455L166.421 109.579C169.415 112.573 169.415 117.427 166.421 120.421C163.427 123.415 158.573 123.415 155.579 120.421L122.667 87.509L43.7546 166.421C40.7605 169.415 35.9063 169.415 32.9123 166.421C29.9182 163.427 29.9182 158.573 32.9123 155.579L117.246 71.2455Z"
              fill="#181F22"
              fill-rule="evenodd"
            />
          </g>
        </svg>
      </figure>
      <form
        style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 40%; width: 85%;"
      >
        <div
          style="position: relative; width: 100%;"
        >
          <div
            class="TextField__InputWrapper-sc-1rxybqp-0 iTdXJA"
          >
            <input
              class="Text__TextBase-s0iq10-0 gviOmd TextField__Input-sc-1rxybqp-1 ejLANn"
              color="background.light"
              mode=""
              name="image_url"
              placeholder="URL da imagem"
              type="text"
              value=""
            />
          </div>
          <button
            class="Button__ButtonWrapper-dey3sw-0 hxjHNE changeUrl"
            mode=""
            style="padding: 0.6rem 1rem; position: absolute; top: 0px; right: 0px;"
          >
            <svg
              fill="none"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12H19"
                stroke="white"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M12 5L19 12L12 19"
                stroke="white"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <span
          class="Text__TextBase-s0iq10-0 gviOmd"
          color="tertiary.light"
          mode=""
        >
          Formatos suportados: jpg, png, svg e xpto.
        </span>
        <button
          class="Button__ButtonWrapper-dey3sw-0 jeOWtT submitUrl"
          disabled=""
          mode=""
          style="margin-top: 2.5rem; margin-bottom: 0.5rem;"
        >
          Avançar
        </button>
        <span
          class="Text__TextBase-s0iq10-0 ShIMM"
          color="error.main"
          mode=""
        >
          Por favor insere uma url valida!
        </span>
      </form>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<FormPost /> renders component with initial screen and url setted 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c3 {
  width: 100%;
  height: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
}

.c1 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c2 {
  color: #D5D5D5;
  width: 2rem;
  cursor: pointer;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  margin-top: 0.5rem;
  margin-right: 1rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: background.light;
  border-radius: 2%;
  background-color: #000;
}

.c5 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

.c9 {
  font-size: 12px;
  font-weight: 400;
  line-height: 1;
}

.c7 {
  border: 0;
  cursor: pointer;
  padding: 12px 26px;
  font-weight: bold;
  border-radius: 8px;
  font-size: 12px;
  font-weight: 400;
  line-height: 1;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  border-radius: 12px;
}

.c7:hover,
.c7:focus {
  -webkit-filter: blur(0.9px);
  filter: blur(0.9px);
}

.c7:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c8 {
  border: 0;
  cursor: pointer;
  padding: 12px 26px;
  font-weight: bold;
  border-radius: 8px;
  font-size: 12px;
  font-weight: 400;
  line-height: 1;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  border-radius: 12px;
  width: 100%;
}

.c8:hover,
.c8:focus {
  -webkit-filter: blur(0.9px);
  filter: blur(0.9px);
}

.c8:disabled {
  cursor: not-allowed;
  opacity: 0.5;
}

.c4 {
  margin-bottom: 17px;
}

.c6 {
  width: 100%;
  border: 1px solid;
  padding: 12px 16px;
  outline: 0;
  border-radius: 12px;
}

@media only screen and (min-width:0px) {
  .c2 {
    margin-bottom: 0.5rem;
  }
}

@media only screen and (min-width:768px) {
  .c2 {
    margin-bottom: 0rem;
  }
}

@media only screen and (min-width:0px) {
  .c0 {
    width: 80%;
  }
}

@media only screen and (min-width:480px) {
  .c0 {
    width: 70%;
  }
}

@media only screen and (min-width:768px) {
  .c0 {
    width: 45%;
  }
}

@media only screen and (min-width:992px) {
  .c0 {
    width: 35%;
  }
}

@media only screen and (min-width:1200px) {
  .c0 {
    width: 400px;
  }
}

@media only screen and (min-width:0px) {
  .c0 {
    height: 95vh;
  }
}

@media only screen and (min-width:480px) {
  .c0 {
    height: 65vh;
  }
}

@media only screen and (min-width:768px) {
  .c0 {
    height: 60vh;
  }
}

@media only screen and (min-width:0px) {
  .c7 {
    font-size: 12px;
    font-weight: 400;
    line-height: 1;
  }
}

@media only screen and (min-width:768px) {
  .c7 {
    font-size: 16px;
    font-weight: 400;
    line-height: 1.25;
  }
}

@media only screen and (min-width:0px) {
  .c8 {
    font-size: 12px;
    font-weight: 400;
    line-height: 1;
  }
}

@media only screen and (min-width:768px) {
  .c8 {
    font-size: 16px;
    font-weight: 400;
    line-height: 1.25;
  }
}

<div>
      <article
        class="c0"
        data-modal-safe-area="true"
        display="flex"
        height="[object Object]"
        mode="dark"
        width="[object Object]"
      >
        <svg
          aria-hidden="true"
          class="c1 c2 closeFormPost"
          fill="currentColor"
          focusable="false"
          mode="dark"
          type="post"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            data-name="Layer 2"
          >
            <path
              d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm2.71 11.29a1 1 0 010 1.42 1 1 0 01-1.42 0L12 13.41l-1.29 1.3a1 1 0 01-1.42 0 1 1 0 010-1.42l1.3-1.29-1.3-1.29a1 1 0 011.42-1.42l1.29 1.3 1.29-1.3a1 1 0 011.42 1.42L13.41 12z"
              data-name="close-circle"
            />
          </g>
        </svg>
        <figure
          class="c3"
          mode=""
        >
          <svg
            fill="none"
            height="184"
            viewBox="0 0 184 184"
            width="184"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              opacity="0.1"
            >
              <path
                clip-rule="evenodd"
                d="M38.3333 30.6666C34.0991 30.6666 30.6666 34.0991 30.6666 38.3333V145.667C30.6666 149.901 34.0991 153.333 38.3333 153.333H145.667C149.901 153.333 153.333 149.901 153.333 145.667V38.3333C153.333 34.0991 149.901 30.6666 145.667 30.6666H38.3333ZM15.3333 38.3333C15.3333 25.6307 25.6307 15.3333 38.3333 15.3333H145.667C158.369 15.3333 168.667 25.6307 168.667 38.3333V145.667C168.667 158.369 158.369 168.667 145.667 168.667H38.3333C25.6307 168.667 15.3333 158.369 15.3333 145.667V38.3333Z"
                fill="#181F22"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M65.1667 61.3333C63.0496 61.3333 61.3333 63.0496 61.3333 65.1667C61.3333 67.2838 63.0496 69 65.1667 69C67.2838 69 69 67.2838 69 65.1667C69 63.0496 67.2838 61.3333 65.1667 61.3333ZM46 65.1667C46 54.5812 54.5812 46 65.1667 46C75.7521 46 84.3333 54.5812 84.3333 65.1667C84.3333 75.7521 75.7521 84.3333 65.1667 84.3333C54.5812 84.3333 46 75.7521 46 65.1667Z"
                fill="#181F22"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M117.246 71.2455C120.24 68.2515 125.094 68.2515 128.088 71.2455L166.421 109.579C169.415 112.573 169.415 117.427 166.421 120.421C163.427 123.415 158.573 123.415 155.579 120.421L122.667 87.509L43.7546 166.421C40.7605 169.415 35.9063 169.415 32.9123 166.421C29.9182 163.427 29.9182 158.573 32.9123 155.579L117.246 71.2455Z"
                fill="#181F22"
                fill-rule="evenodd"
              />
            </g>
          </svg>
        </figure>
        <form
          style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 40%; width: 85%;"
        >
          <div
            style="position: relative; width: 100%;"
          >
            <div
              class="c4"
            >
              <input
                class="c5 c6"
                color="background.light"
                mode=""
                name="image_url"
                placeholder="URL da imagem"
                type="text"
                value=""
              />
            </div>
            <button
              class="c7 changeUrl"
              mode=""
              style="padding: 0.6rem 1rem; position: absolute; top: 0px; right: 0px;"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12H19"
                  stroke="white"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M12 5L19 12L12 19"
                  stroke="white"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
          <span
            class="c5"
            color="tertiary.light"
            mode=""
          >
            Formatos suportados: jpg, png, svg e xpto.
          </span>
          <button
            class="c8 submitUrl"
            disabled=""
            mode=""
            style="margin-top: 2.5rem; margin-bottom: 0.5rem;"
          >
            Avançar
          </button>
          <span
            class="c9"
            color="error.main"
            mode=""
          >
            Por favor insere uma url valida!
          </span>
        </form>
      </article>
    </div>
  </body>,
  "container": <div>
    <article
      class="Box-sc-1swxen0-0 hDnmCK"
      data-modal-safe-area="true"
      display="flex"
      height="[object Object]"
      mode="dark"
      width="[object Object]"
    >
      <svg
        aria-hidden="true"
        class="StyledIconBase-ea9ulj-0 cKCFNq CloseModalIcon-dhl7rb-0 eYKoq closeFormPost"
        fill="currentColor"
        focusable="false"
        mode="dark"
        type="post"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          data-name="Layer 2"
        >
          <path
            d="M12 2a10 10 0 1010 10A10 10 0 0012 2zm2.71 11.29a1 1 0 010 1.42 1 1 0 01-1.42 0L12 13.41l-1.29 1.3a1 1 0 01-1.42 0 1 1 0 010-1.42l1.3-1.29-1.3-1.29a1 1 0 011.42-1.42l1.29 1.3 1.29-1.3a1 1 0 011.42 1.42L13.41 12z"
            data-name="close-circle"
          />
        </g>
      </svg>
      <figure
        class="PostImage__DefaultStyle-sc-1e9jv37-1 jYONzd"
        mode=""
      >
        <svg
          fill="none"
          height="184"
          viewBox="0 0 184 184"
          width="184"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            opacity="0.1"
          >
            <path
              clip-rule="evenodd"
              d="M38.3333 30.6666C34.0991 30.6666 30.6666 34.0991 30.6666 38.3333V145.667C30.6666 149.901 34.0991 153.333 38.3333 153.333H145.667C149.901 153.333 153.333 149.901 153.333 145.667V38.3333C153.333 34.0991 149.901 30.6666 145.667 30.6666H38.3333ZM15.3333 38.3333C15.3333 25.6307 25.6307 15.3333 38.3333 15.3333H145.667C158.369 15.3333 168.667 25.6307 168.667 38.3333V145.667C168.667 158.369 158.369 168.667 145.667 168.667H38.3333C25.6307 168.667 15.3333 158.369 15.3333 145.667V38.3333Z"
              fill="#181F22"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M65.1667 61.3333C63.0496 61.3333 61.3333 63.0496 61.3333 65.1667C61.3333 67.2838 63.0496 69 65.1667 69C67.2838 69 69 67.2838 69 65.1667C69 63.0496 67.2838 61.3333 65.1667 61.3333ZM46 65.1667C46 54.5812 54.5812 46 65.1667 46C75.7521 46 84.3333 54.5812 84.3333 65.1667C84.3333 75.7521 75.7521 84.3333 65.1667 84.3333C54.5812 84.3333 46 75.7521 46 65.1667Z"
              fill="#181F22"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M117.246 71.2455C120.24 68.2515 125.094 68.2515 128.088 71.2455L166.421 109.579C169.415 112.573 169.415 117.427 166.421 120.421C163.427 123.415 158.573 123.415 155.579 120.421L122.667 87.509L43.7546 166.421C40.7605 169.415 35.9063 169.415 32.9123 166.421C29.9182 163.427 29.9182 158.573 32.9123 155.579L117.246 71.2455Z"
              fill="#181F22"
              fill-rule="evenodd"
            />
          </g>
        </svg>
      </figure>
      <form
        style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 40%; width: 85%;"
      >
        <div
          style="position: relative; width: 100%;"
        >
          <div
            class="TextField__InputWrapper-sc-1rxybqp-0 iTdXJA"
          >
            <input
              class="Text__TextBase-s0iq10-0 gviOmd TextField__Input-sc-1rxybqp-1 ejLANn"
              color="background.light"
              mode=""
              name="image_url"
              placeholder="URL da imagem"
              type="text"
              value=""
            />
          </div>
          <button
            class="Button__ButtonWrapper-dey3sw-0 hxjHNE changeUrl"
            mode=""
            style="padding: 0.6rem 1rem; position: absolute; top: 0px; right: 0px;"
          >
            <svg
              fill="none"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12H19"
                stroke="white"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
              <path
                d="M12 5L19 12L12 19"
                stroke="white"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <span
          class="Text__TextBase-s0iq10-0 gviOmd"
          color="tertiary.light"
          mode=""
        >
          Formatos suportados: jpg, png, svg e xpto.
        </span>
        <button
          class="Button__ButtonWrapper-dey3sw-0 jeOWtT submitUrl"
          disabled=""
          mode=""
          style="margin-top: 2.5rem; margin-bottom: 0.5rem;"
        >
          Avançar
        </button>
        <span
          class="Text__TextBase-s0iq10-0 ShIMM"
          color="error.main"
          mode=""
        >
          Por favor insere uma url valida!
        </span>
      </form>
    </article>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
